--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 <div class="mainContainer">
 
   <div class="buttonRow">
-    <a href="#"><button class="btn btn-primary submitButton">SUBMIT AN ITEM</button></a>
+    <a href="/lostInput"><button class="btn btn-primary submitButton">SUBMIT AN ITEM</button></a>
   </div>
 
   <h1 class="heading">Listings</h1>
