--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,56 +5,62 @@
       <button class="btn submitButton">Submit an ITEM</button>
     </a>
   </div>
-  <section #listcontainer class="listContainer" *ngFor="let post of posts.data; let i = index"><!--ngfor loop-->
-    <div class="itemCard"><!--conditional class lost or found?-->
+  <section class="listContainer" *ngFor="let post of posts; let i = index"><!--ngfor loop-->
+    <div #listcontainer class="itemCard"><!--conditional class lost or found?-->
       <div class="row">
         <div class="col-6">
           <div class="itemInfo" (click)="getDescription(description)">
-            <div class="itemName">{{post.attributes.Title}}</div>
             <div>
-              <div class="date"><span class="bold">Date: </span>{{post.attributes.Location}} </div>
-              <div class="location"><span class="bold" class="bold">Location: </span>{{post.attributes.Location}}</div>
+              <div class="itemName">{{post.title}}</div>
+              <div>Posted: {{dateString[i]}}</div>
+            </div>
+            <div>
+              <div class="date"><span class="bold">Date: </span>{{post.date_found}} </div>
+              <div class="location"><span class="bold" class="bold">Location: </span>{{post.location}}</div>
             </div>
           </div>
         </div>
         <div class="col-6">
           <div class="card-image">
             <img
-              [src]="post.attributes.Image"
+              [src]="post.image"
             />
           </div>
         </div>
       </div>
 
       <!--expanded-->
-      <div #description [style.display]="status" class="expandedRow row">
-        <div class="card-desc">
-          <span class="bold">Item Detail:<br></span>
-          {{post.attributes.Description}}
-        </div>
-        <div class="contactBtn_wrapper">
-          <button (click)="getInfo(contactInfo)" class="btn">Contact Information</button>
-        </div>
-        <div  #contactInfo [style.display]="status">
+      <div #description [style.display]="status">
+        <div class="descWrapper">
+          <div class="card-desc">
+            <span class="bold">Item Detail:<br></span>
+            {{post.description}}
+          </div>
+          <!-- <div class="contactBtn_wrapper">
+            <button (click)="getInfo(contactInfo)" class="btn">Contact Information</button>
+          </div> -->
           <div class="card-container">
             <div class="float-layout">
               <div class="contactName">
                 <span class="bold">Contact Name:</span>
-                {{post.attributes.Claim_name}}
+                {{post.contact_name}}
               </div>
               <div class="email">
-                <span class="bold">Email: </span>{{post.attributes.Email}}
+                <span class="bold">Email: </span>{{post.email}}
               </div>
               <div class="phoneNumber" >
-                <span class="bold">Phone Number: </span>{{post.attributes.Phonenumber}}
-              </div>
-              <div class="claimBtn_wrapper">
-                <button (click)="closeItem(listcontainer, post.id, post.attributes.Close)" class="btn claimBtn">
-                  Claim
-                </button>
+                <span class="bold">Phone Number: </span>{{post.phonenumber}}
               </div>
             </div>
           </div>
+        </div>
+        <div class="Btn_wrapper">
+          <button (click)="claimItem(description, listcontainer, post.id)" class="btn claimBtn">
+            Claim
+          </button>
+          <a href="#" routerLink="/lostEdit">
+            <button class="btn">Edit Item</button>
+          </a>
         </div>
       </div>
     </div>
