--- a/src/app/lost-edit/lost-edit.component.scss
+++ b/src/app/lost-edit/lost-edit.component.scss
@@ -5,7 +5,7 @@
 }
 
 .post-wrap {
-  padding: 3rem 0;
+  padding: 2rem 15rem;
   flex-direction: column;
 }
 
@@ -15,7 +15,7 @@ h1 {
 }
 
 .container {
-  width: 80%;
+  width: 100%;
   padding: 3rem 2rem;
   border-bottom: 10px solid #1477EC;
   border-right: 5px solid #1477EC;
@@ -23,16 +23,67 @@ h1 {
   background-color: #F8F2F2;
 }
 
-.required-label {
-  font-size: 0.6rem;
-  color: red;
+.form-title{
+  padding-left: 10px;
+  font-size: 1rem;
+  color: #4d4d4d;
+}
+.form-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-@media screen and (min-width: 768px) {
+.box{
+  padding: 10px;
+}
+
+.half{
+  width: 33%;
+}
+
+.full{
+  width: 100%;
+}
+
+input,textarea{
+  font-size: .8rem;
+  border: none;
+  color: #4d4d4d;
+}
+
+input:focus{
+  border:1px solid #1477EC;
+  caret-color:#1477EC;
+  box-shadow: none;
+}
+
+label{
+  color: #4d4d4d;
+  font-size: .8rem;
+}
+
+.alert{
+  padding: 0;
+  margin: 0 auto;
+  font-size: 0.7rem;
+  color: #1477EC;
+}
+
+.btn{
+  width:100%;
+  border: 2px solid black;
+  background-color: #1477EC;
+  box-shadow: 5px 5px #888888;
+}
+
+
+@media screen and (max-width: 768px) {
   .post-wrap {
-    padding: 6rem 5rem;
+    padding: 2rem 2rem;
   }
-  .container {
-    width: 70%;
+  .half{
+    width: 100%;
   }
 }
